lib/hermes_dart.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:hermes_dart/hermes_dart.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<
  HermesABIArrayOrError Function(ffi.Pointer<HermesABIRuntime>, ffi.Size)
>()
external HermesABIArrayOrError hermes_array_create(
  ffi.Pointer<HermesABIRuntime> rt,
  int length,
);

@ffi.Native<ffi.Size Function(ffi.Pointer<HermesABIRuntime>, HermesABIArray)>()
external int hermes_array_get_length(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIArray arr,
);

@ffi.Native<
  HermesABIValueOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIArray,
    ffi.Size,
  )
>()
external HermesABIValueOrError hermes_array_value_get_at_index(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIArray arr,
  int index,
);

@ffi.Native<
  HermesABIVoidOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIArray,
    ffi.Size,
    HermesABIValue,
  )
>()
external HermesABIVoidOrError hermes_array_value_set_at_index(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIArray arr,
  int index,
  HermesABIValue value,
);

@ffi.Native<
  HermesABIArrayBufferOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Void>,
    HermesABIMutableBufferRelease,
  )
>()
external HermesABIArrayBufferOrError
hermes_arraybuffer_create_from_external_data(
  ffi.Pointer<HermesABIRuntime> rt,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Void> user_data,
  HermesABIMutableBufferRelease release_cb,
);

@ffi.Native<
  HermesABIUint8PtrOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIArrayBuffer,
  )
>()
external HermesABIUint8PtrOrError hermes_arraybuffer_get_data(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIArrayBuffer ab,
);

@ffi.Native<
  HermesABISizeTOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIArrayBuffer,
  )
>()
external HermesABISizeTOrError hermes_arraybuffer_get_size(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIArrayBuffer ab,
);

@ffi.Native<
  ffi.Int64 Function(ffi.Pointer<HermesABIRuntime>, HermesABIBigInt)
>()
external int hermes_bigint_as_int64(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIBigInt bi,
);

@ffi.Native<
  HermesABIBigInt Function(ffi.Pointer<HermesABIRuntime>, HermesABIBigInt)
>()
external HermesABIBigInt hermes_bigint_clone(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIBigInt bi,
);

@ffi.Native<
  HermesABIBigIntOrError Function(ffi.Pointer<HermesABIRuntime>, ffi.Int64)
>()
external HermesABIBigIntOrError hermes_bigint_create_from_int64(
  ffi.Pointer<HermesABIRuntime> rt,
  int value,
);

@ffi.Native<ffi.Bool Function(ffi.Pointer<HermesABIRuntime>, HermesABIBigInt)>()
external bool hermes_bigint_is_int64(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIBigInt bi,
);

@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIBigInt,
    HermesABIBigInt,
  )
>()
external bool hermes_bigint_strict_equals(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIBigInt a,
  HermesABIBigInt b,
);

@ffi.Native<
  HermesABIStringOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIBigInt,
    ffi.Int,
  )
>()
external HermesABIStringOrError hermes_bigint_to_string(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIBigInt bi,
  int radix,
);

@ffi.Native<
  HermesABIStringOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    ffi.Pointer<ffi.Char>,
  )
>()
external HermesABIStringOrError hermes_create_string_from_utf8(
  ffi.Pointer<HermesABIRuntime> rt,
  ffi.Pointer<ffi.Char> str,
);

@ffi.Native<
  HermesABIValue Function(
    ffi.Pointer<HermesABIRuntime>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Char>,
  )
>()
external HermesABIValue hermes_evaluate_bytecode(
  ffi.Pointer<HermesABIRuntime> rt,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Char> source_url,
);

@ffi.Native<
  HermesABIValue Function(
    ffi.Pointer<HermesABIRuntime>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Char>,
  )
>()
external HermesABIValue hermes_evaluate_javascript(
  ffi.Pointer<HermesABIRuntime> rt,
  ffi.Pointer<ffi.Uint8> script,
  int script_len,
  ffi.Pointer<ffi.Char> source_url,
);

@ffi.Native<
  HermesABIValue Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIFunction,
    HermesABIValue,
    ffi.Pointer<HermesABIValue>,
    ffi.Size,
  )
>()
external HermesABIValue hermes_function_call(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIFunction fn,
  HermesABIValue js_this,
  ffi.Pointer<HermesABIValue> args,
  int arg_count,
);

@ffi.Native<
  HermesABIValue Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIFunction,
    ffi.Pointer<HermesABIValue>,
    ffi.Size,
  )
>()
external HermesABIValue hermes_function_call_as_constructor(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIFunction fn,
  ffi.Pointer<HermesABIValue> args,
  int arg_count,
);

@ffi.Native<
  HermesABIFunctionOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIPropNameID,
    ffi.UnsignedInt,
    ffi.Pointer<ffi.Void>,
    HermesABIHostFunctionCall,
    HermesABIHostFunctionRelease,
  )
>()
external HermesABIFunctionOrError hermes_function_create_from_host(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIPropNameID name,
  int length,
  ffi.Pointer<ffi.Void> user_data,
  HermesABIHostFunctionCall call_cb,
  HermesABIHostFunctionRelease release_cb,
);

@ffi.Native<
  HermesABIBoolOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIObject,
    HermesABIFunction,
  )
>()
external HermesABIBoolOrError hermes_instance_of(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIObject obj,
  HermesABIFunction ctor,
);

@ffi.Native<
  HermesABIObject Function(ffi.Pointer<HermesABIRuntime>, HermesABIObject)
>()
external HermesABIObject hermes_object_clone(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIObject obj,
);

@ffi.Native<HermesABIObjectOrError Function(ffi.Pointer<HermesABIRuntime>)>()
external HermesABIObjectOrError hermes_object_create(
  ffi.Pointer<HermesABIRuntime> rt,
);

@ffi.Native<
  HermesABIObjectOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    ffi.Pointer<ffi.Void>,
    HermesABIHostObjectGet,
    HermesABIHostObjectSet,
    HermesABIHostObjectGetOwnKeys,
    HermesABIHostObjectRelease,
  )
>()
external HermesABIObjectOrError hermes_object_create_from_host_object(
  ffi.Pointer<HermesABIRuntime> rt,
  ffi.Pointer<ffi.Void> user_data,
  HermesABIHostObjectGet get_cb,
  HermesABIHostObjectSet set_cb,
  HermesABIHostObjectGetOwnKeys get_own_keys_cb,
  HermesABIHostObjectRelease release_cb,
);

@ffi.Native<
  HermesABIValueOrError Function(ffi.Pointer<HermesABIRuntime>, ffi.Uint64)
>()
external HermesABIValueOrError hermes_object_from_id(
  ffi.Pointer<HermesABIRuntime> rt,
  int id,
);

@ffi.Native<
  ffi.Pointer<ffi.Void> Function(ffi.Pointer<HermesABIRuntime>, HermesABIObject)
>()
external ffi.Pointer<ffi.Void> hermes_object_get_native_state_data(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIObject obj,
);

@ffi.Native<
  HermesABIValue Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIObject,
    HermesABIPropNameID,
  )
>()
external HermesABIValue hermes_object_get_property_from_propnameid(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIObject obj,
  HermesABIPropNameID name,
);

@ffi.Native<
  HermesABIValue Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIObject,
    HermesABIValue,
  )
>()
external HermesABIValue hermes_object_get_property_from_value(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIObject obj,
  HermesABIValue key,
);

@ffi.Native<
  HermesABIArrayOrError Function(ffi.Pointer<HermesABIRuntime>, HermesABIObject)
>()
external HermesABIArrayOrError hermes_object_get_property_names(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIObject obj,
);

@ffi.Native<
  HermesABIBoolOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIObject,
    HermesABIPropNameID,
  )
>()
external HermesABIBoolOrError hermes_object_has_property_from_propnameid(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIObject obj,
  HermesABIPropNameID name,
);

@ffi.Native<
  HermesABIBoolOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIObject,
    HermesABIValue,
  )
>()
external HermesABIBoolOrError hermes_object_has_property_from_value(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIObject obj,
  HermesABIValue key,
);

@ffi.Native<ffi.Bool Function(ffi.Pointer<HermesABIRuntime>, HermesABIObject)>()
external bool hermes_object_is_array(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIObject obj,
);

@ffi.Native<ffi.Bool Function(ffi.Pointer<HermesABIRuntime>, HermesABIObject)>()
external bool hermes_object_is_arraybuffer(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIObject obj,
);

@ffi.Native<ffi.Bool Function(ffi.Pointer<HermesABIRuntime>, HermesABIObject)>()
external bool hermes_object_is_function(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIObject obj,
);

@ffi.Native<
  HermesABIVoidOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIObject,
    ffi.Pointer<ffi.Void>,
    HermesABINativeStateRelease,
  )
>()
external HermesABIVoidOrError hermes_object_set_native_state(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIObject obj,
  ffi.Pointer<ffi.Void> user_data,
  HermesABINativeStateRelease release_cb,
);

@ffi.Native<
  HermesABIVoidOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIObject,
    HermesABIPropNameID,
    HermesABIValue,
  )
>()
external HermesABIVoidOrError hermes_object_set_property_from_propnameid(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIObject obj,
  HermesABIPropNameID name,
  HermesABIValue value,
);

@ffi.Native<
  HermesABIVoidOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIObject,
    HermesABIValue,
    HermesABIValue,
  )
>()
external HermesABIVoidOrError hermes_object_set_property_from_value(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIObject obj,
  HermesABIValue key,
  HermesABIValue value,
);

@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIObject,
    HermesABIObject,
  )
>()
external bool hermes_object_strict_equals(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIObject a,
  HermesABIObject b,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<HermesABIManagedPointer>)>()
external void hermes_pointer_release(
  ffi.Pointer<HermesABIManagedPointer> ptr,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<HermesABIManagedPointer>)>()
external void hermes_pointer_release_safe(
  ffi.Pointer<HermesABIManagedPointer> ptr,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<HermesABIPreparedJavaScript>)>()
external void hermes_preparedjavascript_release(
  ffi.Pointer<HermesABIPreparedJavaScript> prepared,
);

@ffi.Native<
  HermesABIPropNameID Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIPropNameID,
  )
>()
external HermesABIPropNameID hermes_propnameid_clone(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIPropNameID name,
);

@ffi.Native<
  HermesABIPropNameIDOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIString,
  )
>()
external HermesABIPropNameIDOrError hermes_propnameid_create_from_string(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIString str,
);

@ffi.Native<
  HermesABIPropNameIDOrError Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABISymbol,
  )
>()
external HermesABIPropNameIDOrError hermes_propnameid_create_from_symbol(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABISymbol sym,
);

@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<HermesABIRuntime>,
    HermesABIPropNameID,
    HermesABIPropNameID,
  )
>()
external bool hermes_propnameid_equals(
  ffi.Pointer<HermesABIRuntime> rt,
  HermesABIPropNameID a,
  HermesABIPropNameID b,
);
